--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://root:edison_pass@localhost:3306/edison_db"
+DATABASE_URL="mysql://root:@@Kush@@2005@localhost:3306/midsem"
 PORT="3000"
